feat: updated api spec
